--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -175,3 +175,7 @@ a.generic-link, a.generic-link:active, a.generic-link:visited, a.generic-link:ho
     font-size: 130%;
     font-weight: 200;
 }
+
+iframe#hmi {
+    width: 100%;
+}
