--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -179,3 +179,26 @@ a.generic-link, a.generic-link:active, a.generic-link:visited, a.generic-link:ho
 iframe#hmi {
     width: 100%;
 }
+
+.skill-wrapper {
+    padding: 25px;
+
+    .skill {
+        color: $chs-blue;
+        height: 150px;
+        width: 150px;
+        margin: auto;
+        padding-top: 55px;
+        border-radius: 50%;
+        -webkit-box-shadow: 0px 0px 25px 0px rgba(207,207,207,1);
+        -moz-box-shadow: 0px 0px 25px 0px rgba(207,207,207,1);
+        box-shadow: 0px 0px 25px 0px rgba(207,207,207,1);dow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+
+        span {
+            font-size: 150%;
+            font-weight: 200;
+        }
+
+    }
+
+}
