--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -176,7 +176,7 @@ a.generic-link, a.generic-link:active, a.generic-link:visited, a.generic-link:ho
     font-weight: 200;
 }
 
-iframe#hmi {
+iframe {
     width: 100%;
 }
 
