--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -132,18 +132,17 @@ hr.divider {
 
 // Form styles
 form {
-    margin: 10% auto;
+    margin: 5% auto;
 }
 
 form input, textarea {
     width: 100%;
     height: 50px;
     margin: 5px auto;
-    padding-left: 5px;
+    padding-left: 15px;
     font-size: 130%;
     font-weight: 200;
-    color: $chs-blue;
-    border: 1px solid #EFEFEF;
+    border: 1px solid $chs-blue;
 }
 
 form textarea {
@@ -151,8 +150,7 @@ form textarea {
     resize: none;
 }
 
-form #success-message {
-    color: $chs-blue;
+form #success-message, #error-message {
     display: none;
 }
 
@@ -226,4 +224,11 @@ iframe {
     text-overflow: ellipsis;
     width: 100%;
     overflow: hidden;
+}
+
+h1 {
+  font-size:     72px;
+  line-height:   1.5;
+  color: #2c3e50;
+  font-weight:   100;
 }
