--- a/src/components/Divider/style.scss
+++ b/src/components/Divider/style.scss
@@ -4,7 +4,7 @@
   text-align: center;
   padding: 50px 0;
 
-  h3 {
+  h2 {
     font-size: 60px;
     margin-top: 0;
     margin-bottom: 20px;
@@ -20,5 +20,11 @@
 
   * {
     color: rgba(255, 255, 255, 0.7);
+  }
+}
+
+@media screen and (max-width: $mobile-max) {
+  .divider h2 {
+    font-size: 40px;
   }
 }
