--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -3,13 +3,27 @@
 .navbar {
   background: white;
   padding: 25px 0;
-  box-shadow: 0px 1px 10px 0 black;
+  box-shadow: 0 3px 4px -2px black;
   position: fixed;
   width: 100%;
+
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  opacity: 0;
+
+  &.fadeIn {
+    animation: fadeIn 0.4s;
+    opacity: 1;
+  }
+
+  &.fadeOut {
+    animation: fadeOut 0.4s;
+  }
 
   & > div {
     width: 100%;
     max-width: 1040px;
+    height: 100%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -50,6 +64,83 @@
           a {
             color: darken($blue, 20);
           }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-max) {
+  .navbar {
+    height: 80px;
+    padding: 0;
+    box-shadow: 0 4px 2px -2px black;
+
+    & > div {
+      & > div {
+        img {
+          width: 50px;
+          height: 50px;
+          margin-left: 40px;
+        }
+      }
+
+      .menuIcon {
+        width: 25px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 40px;
+
+        div {
+            background: $blue;
+            opacity: 1;
+            height: 3px;
+            width: 100%;
+            transition: 0.3s;
+        }
+
+        &.toggled {
+            div {
+                width: 100%;
+            }
+
+            div:first-child {
+                transform: rotate(-45deg) translate(-5px, 10px);
+            }
+
+            div:nth-child(2) {
+                opacity: 0;
+            } 
+
+            div:last-child {
+                transform: rotate(45deg) translate(-5px, -10px);
+            }
+        }
+    }
+
+      ul {
+        position: fixed;
+        top: 80px;
+        left: 0;
+        background: white;
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+        overflow: hidden;
+        box-shadow: 0 3px 4px -2px black;
+        max-height: 0px;
+        transition: max-height 0.3s ease-in-out;
+
+        &.expanded {
+          max-height: 400px;
+          height: auto;
+        }
+
+        li {
+          margin: 15px 0;
+          margin-left: 0;
         }
       }
     }
