--- a/src/components/PortfolioItem/style.scss
+++ b/src/components/PortfolioItem/style.scss
@@ -7,12 +7,16 @@
   padding: 25px 0;
 
   .content {
-    max-width: 60%;
     order: 2;
     text-align: right;
+    max-width: 80%;
 
     h3 {
       font-size: 40px;
+    }
+
+    a {
+      text-decoration: underline;
     }
   }
 
