--- a/src/containers/Portfolio/style.scss
+++ b/src/containers/Portfolio/style.scss
@@ -1,13 +1,5 @@
 @import '../../App.scss';
 
-.about {
-  display: flex;
+.portfolio {
   
-  .content {
-    flex-basis: 60%;
-  }
-
-  .timeline {
-    flex-basis: 40%;
-  }
 }
