--- a/src/containers/About/style.scss
+++ b/src/containers/About/style.scss
@@ -3,11 +3,15 @@
 .about {
   display: flex;
   
+  &.container {
+    padding: 50px 0;
+  }
+  
   .content {
     flex-basis: 60%;
   }
 
-  .timeline {
+  .timeline-wrapper {
     flex-basis: 40%;
   }
 }
@@ -18,6 +22,7 @@
 
     .content {
       flex-basis: 100%;
+      margin-bottom: 25px;
     }
   }
 }
