Link to top on navbar image click and pulse animation in timeline

--- a/src/components/Timeline/style.scss
+++ b/src/components/Timeline/style.scss
@@ -1,10 +1,29 @@
 @import "../../App.scss";
 
+$c1: rgba(64, 72, 93, 0.4);
+$c2: rgba(64, 72, 93, 0);
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 $c1;
+    box-shadow: 0 0 0 0 $c1;
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px $c2;
+      box-shadow: 0 0 0 10px $c2;
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 $c2;
+      box-shadow: 0 0 0 0 $c2;
+  }
+}
+
 .timeline {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  padding: 20px 0;
 
   .arrow {
     width: 20px;
@@ -57,6 +76,7 @@
       border-radius: 50%;
       z-index: 1;	
       margin-left: -12.5px;
+      animation: pulse 2s infinite;
     }
 
     & > div {
@@ -84,7 +104,7 @@
   }
 
   .gradient {
-    height: 30px;	
+    height: 20px;	
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
     position: absolute;
     bottom: 0;
