--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,13 @@ body {
 }
 
 * {
-  font-family: 'Noteworthy', Helvetica;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   color: $blue;
+}
+
+p, span {
+  font-weight: lighter;
 }
 
 strong {
@@ -41,6 +45,15 @@ a {
   }
 }
 
+@mixin scaleOnHover {
+  transition: all linear 0.2s;
+  transform-origin: center;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -56,6 +69,36 @@ a {
   }
   100% {
     opacity: 0;
+  }
+}
+
+$c1: rgba(64, 72, 93, 0.4);
+$c2: rgba(64, 72, 93, 0);
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 $c1;
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px $c2;
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 $c2;
+  }
+}
+
+@keyframes pulse {
+  0% {
+      -moz-box-shadow: 0 0 0 0 $c1;
+      box-shadow: 0 0 0 0 $c1;
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px $c2;
+      box-shadow: 0 0 0 10px $c2;
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 $c2;
+      box-shadow: 0 0 0 0 $c2;
   }
 }
 
