--- a/src/components/PortfolioItem/style.scss
+++ b/src/components/PortfolioItem/style.scss
@@ -27,6 +27,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    @include scaleOnHover;
 
     a {
       margin-top: 25px;
