--- a/src/components/ExperienceTimeline/style.scss
+++ b/src/components/ExperienceTimeline/style.scss
@@ -54,8 +54,8 @@
 
     img {
       position: absolute;
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       border: 2px solid $blue;
       border-radius: 50%;
       z-index: 1;	
@@ -63,6 +63,8 @@
       left: 0;
       transform: translateX(-50%);
       cursor: pointer;
+      padding: 5px;
+      background: white;
 
       &:hover {
         animation: pulse 2s infinite;
