--- a/src/components/Spinner/style.scss
+++ b/src/components/Spinner/style.scss
@@ -1,10 +1,5 @@
 @import "../../App.scss";
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
 .spinner-wrapper {
   margin: 25px auto;
 
@@ -15,6 +10,6 @@
     border: 5px solid #f3f3f3;
     border-top: 5px solid $blue;
     margin: auto;
-    animation: spin 1.5s ease infinite;
+    @include spin;
   }
 }
