--- a/src/components/ExperienceTimeline/style.scss
+++ b/src/components/ExperienceTimeline/style.scss
@@ -1,5 +1,3 @@
-@import "../../App.scss";
-
 .experience-timeline {
   display: flex;
   flex-direction: column;
@@ -67,7 +65,8 @@
       background: white;
 
       &:hover {
-        animation: pulse 2s infinite;
+        // TODO fix choppy animation in Safari
+        // animation: pulse 2s infinite;
       }
     }
 
