--- a/src/components/Timeline/style.scss
+++ b/src/components/Timeline/style.scss
@@ -1,5 +1,3 @@
-@import "../../App.scss";
-
 .timeline {
   display: flex;
   flex-direction: column;
@@ -58,7 +56,9 @@
       border-radius: 50%;
       z-index: 1;	
       margin-left: -12.5px;
-      animation: pulse 2s infinite;
+      
+      // TODO fix choppy animation in Safari
+      // animation: pulse 2s infinite;
     }
 
     & > div {
