--- a/src/containers/Contact/style.scss
+++ b/src/containers/Contact/style.scss
@@ -1,5 +1,3 @@
-@import "../../App.scss";
-
 .contact {
   text-align: center;
 
@@ -10,6 +8,13 @@
     margin: auto;
     width: 60%;
     margin-bottom: 50px;
+
+    &:invalid {
+      button {
+        opacity: 0.7;
+        cursor: not-allowed;
+      }
+    }
 
     input, textarea {
       border: 2px solid $blue;
@@ -37,10 +42,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
-      &.disabled {
-        opacity: 0.8;
-      }
 
       span {
         color: white;
