--- a/src/components/PortfolioItem/style.scss
+++ b/src/components/PortfolioItem/style.scss
@@ -34,8 +34,13 @@
   }
 
   &.left {
-    .content { order: 1; text-align: left; }
-    .cta { order: 2; }
+    .content {
+      order: 1;
+      text-align: left;
+    }
+    .cta {
+      order: 2;
+    }
   }
 }
 
