--- a/src/components/ExperienceTimeline/style.scss
+++ b/src/components/ExperienceTimeline/style.scss
@@ -20,7 +20,7 @@
   }
 
   &:after {
-    content: '';
+    content: "";
     position: absolute;
     width: 6px;
     background-color: $blue;
@@ -56,7 +56,7 @@
       height: 50px;
       border: 2px solid $blue;
       border-radius: 50%;
-      z-index: 1;	
+      z-index: 1;
       top: 0;
       left: 0;
       transform: translateX(-50%);
@@ -71,16 +71,16 @@
     }
 
     .experience-timeline-item-content {
-      background: #EFEFEF;
+      background: #efefef;
       padding: 20px;
     }
 
     & > div {
-      flex-basis: 50%;	
+      flex-basis: 50%;
       position: relative;
     }
 
-    &:nth-child(odd){
+    &:nth-child(odd) {
       justify-content: flex-start;
 
       & > div {
@@ -103,14 +103,18 @@
         margin-left: 40px;
       }
 
-      text-align: left;	
+      text-align: left;
       justify-content: flex-end;
     }
   }
 
   .gradient {
-    height: 15px;	
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    height: 15px;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 1)
+    );
     position: absolute;
     bottom: 0;
     left: 0;
@@ -123,7 +127,8 @@
   .experience-timeline {
     padding-top: 0;
 
-    .arrow, &:after {
+    .arrow,
+    &:after {
       display: none;
     }
 
