--- a/src/containers/Social/style.scss
+++ b/src/containers/Social/style.scss
@@ -6,9 +6,17 @@
   flex-wrap: wrap;
   color: white;
 
-  background: #141E30;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #141e30; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   h2 {
     color: white !important;
@@ -18,7 +26,7 @@
     text-align: center;
     margin-top: 0;
   }
-  
+
   .social-item {
     margin: 0 75px;
     text-align: center;
