--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -93,6 +93,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        cursor: pointer;
         margin-right: 40px;
 
         div {
