--- a/src/global.scss
+++ b/src/global.scss
@@ -7,7 +7,7 @@ body {
 }
 
 * {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   color: $blue;
 }
