Migrate to styled components

--- a/src/global.scss
+++ b/src/global.scss
@@ -7,7 +7,7 @@ body {
 }
 
 * {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: normal;
   color: $blue;
 }
@@ -19,6 +19,15 @@ span {
 
 strong {
   font-weight: bold;
+}
+
+h2 {
+  font-size: 40px;
+  margin-top: 0;
+}
+
+p {
+  font-size: 20px;
 }
 
 .container {
